# AutoXPost

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: post.yml
examples/: sample_post.json  scheduled_campaign.json
posts/: README.md  example-launch.json
src/autoxpost/: __init__.py  __main__.py  cli.py  config.py
src/autoxpost/core/: __init__.py  post.py  publisher.py  queue.py  safety.py  scheduler.py
src/autoxpost/runners/: __init__.py  predefined.py  telegram.py
src/autoxpost/storage/: __init__.py  sqlite.py
state/: README.md
tests/: conftest.py  test_platforms.py  test_post.py  test_publisher.py  test_safety.py  test_threads.py
